# Phynned

./: .gitignore  CMakeLists.txt  README.md  build-release.bat  build.bat  testbench.ps1
action/: CMakeLists.txt
action/include/ayama/action/: ActionExecutor.hpp  ActionLog.hpp  AuditLog.hpp
action/include/phynned/action/: AcProbe.hpp  ActionExecutor.hpp  ActionLog.hpp  AuditLog.hpp  RevertJournal.hpp
action/src/: AcProbe.cpp  ActionExecutor.cpp  RevertJournal.cpp
action/tests/: action_executor_test.cpp  journal_taskkill_test.cpp  revert_journal_test.cpp  selective_revert_test.cpp
bench/: CMakeLists.txt
bench/include/ayama/bench/: ABRunner.hpp  Baseline.hpp  DiffReport.hpp  PerceptualMetrics.hpp
bench/include/phynned/bench/: ABRunner.hpp  Baseline.hpp  DiffReport.hpp  PerceptualMetrics.hpp
bench/src/: ABRunner.cpp  Baseline.cpp  PerceptualMetrics.cpp
bench/tests/: abrunner_test.cpp  baseline_test.cpp  perceptual_test.cpp
build-relsym/: .ninja_deps  (+5 more)
config/: CMakeLists.txt
config/include/ayama/config/: ConfigStore.hpp  DefaultPolicyPack.hpp
config/include/phynned/config/: ConfigStore.hpp  DefaultPolicyPack.hpp
config/src/: ConfigStore.cpp
config/tests/: config_test.cpp
core/: CMakeLists.txt
core/include/ayama/: version.hpp
core/include/ayama/core/: AdaptiveTick.hpp  AgentRuntime.hpp  AutoRevertGuard.hpp  Diag.hpp  IdleWatch.hpp  InternalWatchdog.hpp  PowerWatch.hpp  SelfMonitor.hpp  SingleInstance.hpp
core/include/phynned/: version.hpp
core/include/phynned/core/: AdaptiveTick.hpp  AgentRuntime.hpp  AutoRevertGuard.hpp  Diag.hpp  IdleWatch.hpp  InternalWatchdog.hpp  PowerWatch.hpp  SelfMonitor.hpp  SingleInstance.hpp  UserPinRule.hpp  UserRuleLookup.hpp
core/src/: AgentRuntime.cpp  AutoRevertGuard.cpp
core/tests/: agent_idle_budget_test.cpp  agent_runtime_test.cpp  use_modes_test.cpp
framework/etw/: CMakeLists.txt
framework/etw/src/: SessionManager.cpp
framework/etw/tests/: etw_test.cpp
framework/graph/: CMakeLists.txt
framework/graph/tests/: graph_test.cpp
framework/hal/: CMakeLists.txt
framework/hal/include/phyriad/: hal.hpp
framework/hal/tests/: allocator_test.cpp  cpu_wait_test.cpp  hal_types_test.cpp  wake_event_test.cpp
framework/ipc/: CMakeLists.txt
framework/ipc/tests/: ring_test.cpp  shm_region_test.cpp
framework/node/: CMakeLists.txt
framework/node/tests/: node_types_test.cpp
framework/process/: CMakeLists.txt
framework/process/src/: CurrentProcess.cpp  ProcessEnumerator.cpp  ProcessMetricsSnapshot.cpp
framework/process/tests/: current_process_test.cpp  enumerate_threads_test.cpp  process_metrics_snapshot_test.cpp  process_test.cpp
framework/profile/: CMakeLists.txt
framework/profile/tests/: performance_profile_test.cpp
framework/render/: CMakeLists.txt
framework/render/composite/: CMakeLists.txt
framework/render/composite/src/: CompositeBackend.cpp
framework/render/composite/tests/: composite_test.cpp  vk_gl_interop_test.cpp
framework/render/opengl3/: CMakeLists.txt
framework/render/opengl3/shaders/: fsr1_easu.glsl  fsr1_rcas.glsl
framework/render/present/: CMakeLists.txt
framework/render/tests/: frame_arena_test.cpp
framework/render/vulkan/: CMakeLists.txt
framework/runtime/: CMakeLists.txt
framework/runtime/src/: GraphRuntime.cpp
framework/runtime/tests/: heartbeat_test.cpp  runtime_test.cpp
framework/scheduler/: CMakeLists.txt
framework/scheduler/src/: Scheduler.cpp
framework/scheduler/tests/: ccd_placement_test.cpp  scheduler_test.cpp
framework/schema/: CMakeLists.txt
framework/schema/tests/: blind_proxy_test.cpp  schema_hash_conformance_test.cpp  schema_types_test.cpp
framework/stigmergy/: CMakeLists.txt
framework/stigmergy/tests/: stigmergy_classifier_test.cpp  stigmergy_field_test.cpp  stigmergy_integration_test.cpp  stigmergy_pheromone_test.cpp
framework/topology/: CMakeLists.txt
framework/topology/src/: CoreTelemetry.cpp
framework/topology/tests/: core_telemetry_test.cpp  thread_affinity_test.cpp  topology_test.cpp
framework/transport/: CMakeLists.txt  testbench.ps1
framework/transport/src/: SlotCopy.cpp
framework/transport/tests/: ring_channel_test.cpp  transport_types_test.cpp
framework/tuning/: CMakeLists.txt
framework/tuning/src/: LinuxTuner.cpp  PlatformTunerFactory.cpp  PrivilegeCheck.cpp  TuningSnapshot.cpp  WindowsTuner.cpp  WorkingSet.cpp
framework/tuning/tests/: tuning_snapshot_test.cpp  tuning_test.cpp  working_set_test.cpp
framework/ui/: CMakeLists.txt
framework/ui/src/: FrameInterpolatorNode.cpp  PresentNode.cpp
framework/ui/tests/: frame_interp_test.cpp  render_backend_test.cpp  render_node_test.cpp  ui_compile_test.cpp
ipc/: CMakeLists.txt
ipc/src/: AyamaAgentPublisher.cpp  AyamaClient.cpp  PhynnedAgentPublisher.cpp  PhynnedClient.cpp
learn/: CMakeLists.txt
learn/src/: PerGameMemory.cpp  RouteAdvisor.cpp
learn/tests/: learn_test.cpp
observer/: CMakeLists.txt
observer/src/: AcDriverOracle.cpp  MetricsCollector_linux.cpp  MetricsCollector_win32.cpp  ProcessClassifier.cpp  ProcessObserver.cpp  ProcessObserver_linux.cpp  ProcessObserver_win32.cpp
observer/tests/: ac_driver_oracle_test.cpp  mass_detection_harness.cpp  process_observer_test.cpp
policy/: CMakeLists.txt
policy/src/: PolicyEngine.cpp
policy/tests/: auto_policy_selector_test.cpp  policy_engine_test.cpp
tools/ayama-agent/: CMakeLists.txt  main.cpp
tools/ayama-bench/: CMakeLists.txt  main.cpp  workload.hpp
tools/ayama-cli/: CMakeLists.txt  main.cpp
tools/ayama-ui/: AgentLauncher.hpp  AyamaAppState.hpp  AyamaLogicNode.hpp  AyamaTrayIcon.hpp  BenchRunner.hpp  CMakeLists.txt  PresentMonSpawner.hpp  ReportExporter.hpp  UserSettings.hpp  ayama-ui.manifest  ayama-ui.rc  build.bat  main.cpp
tools/ayama-ui/widgets/: actions_panel.hpp  advanced_panel.hpp  anticheat_warning.hpp  bench_panel.hpp  cpu_class_helpers.hpp  dashboard_panel.hpp  policies_panel.hpp  settings_panel.hpp  setup_panel.hpp  targets_panel.hpp
tools/installer/: CMakeLists.txt  ayama_service_register.cpp  install.bat  phynned_service_register.cpp  uninstall.bat
(+359 files in other folders)
